# distributed-process-task

./: README.md  distributed-process-task.cabal  stack.yaml
src/Control/Distributed/Process/: Task.hs
src/Control/Distributed/Process/Platform/Task/Queue/: BlockingQueue.hs
src/Control/Distributed/Process/Task/: Pool.hs
src/Control/Distributed/Process/Task/Pool/: Backend.hs  WorkerPool.hs
src/Control/Distributed/Process/Task/Pool/Internal/: Process.hs  Types.hs
src/Control/Distributed/Process/Task/Queue/: BlockingQueue.hs
tests/: TestPool.hs  TestTaskQueues.hs
