name:           distributed-process-task
version:        0.2.0
cabal-version:  >=1.8
build-type:     Simple
license:        BSD3
license-file:   LICENCE
Copyright:      Tim Watson 2012 - 2018
Author:         Tim Watson
Maintainer:     Tim Watson <watson.timothy@gmail.com>
Stability:      experimental
Homepage:       http://github.com/haskell-distributed/distributed-process-task
Bug-Reports:    http://github.com/haskell-distributed/distributed-process-task/issues
synopsis:       Task Framework for The Cloud Haskell Application Platform
description:    A Cloud Haskell Task Framework - Provides tools for task management, work scheduling and distributed task coordination.
category:       Control, Cloud Haskell
tested-with:    GHC == 8.4.4
data-dir:       ""

source-repository head
  type:      git
  location:  https://github.com/haskell-distributed/distributed-process-task

flag perf
  description: Build with profiling enabled
  default: False

library
  build-depends:
                   base >= 4.8.2.0 && < 5,
                   rank1dynamic >= 0.3.3.0,
                   distributed-process >= 0.7.4 && < 1.0,
                   distributed-process-async >= 0.2.4 && < 1.0,
                   distributed-process-extras >= 0.3.1 && < 1.0,
                   distributed-process-client-server >= 0.2.5 && <1.0,
                   distributed-process-supervisor >= 0.2.0 && < 1.0,
                   binary >= 0.6.3.0 && < 1.0,
                   deepseq >= 1.3.0.1 && < 1.6,
                   mtl,
                   exceptions,
                   data-accessor,
                   containers,
                   hashable,
                   unordered-containers,
                   fingertree < 0.2,
                   stm >= 2.4 && < 3.0,
                   time > 1.4 && < 2.0,
                   transformers
  extensions:      CPP
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:
                   Control.Distributed.Process.Task,
                   Control.Distributed.Process.Task.Pool,
                   Control.Distributed.Process.Task.Pool.Backend,
                   Control.Distributed.Process.Task.Pool.WorkerPool,
                   Control.Distributed.Process.Task.Pool.Internal.Process,
                   Control.Distributed.Process.Task.Pool.Internal.Types,
                   Control.Distributed.Process.Task.Queue.BlockingQueue

test-suite TaskQueueTests
  type:            exitcode-stdio-1.0
--  x-uses-tf:       true
  build-depends:
                   base >= 4.8.2.0 && < 5,
                   ansi-terminal >= 0.5 && < 0.9,
                   containers,
                   hashable,
                   exceptions,
                   unordered-containers,
                   distributed-process >= 0.7.4,
                   distributed-process-systest >= 0.1.1,
                   distributed-process-task,
                   distributed-process-extras >= 0.3.2,
                   distributed-process-async >= 0.2.4,
                   distributed-process-client-server >= 0.2.5,
                   distributed-static,
                   bytestring,
                   data-accessor,
                   fingertree < 0.2,
                   deepseq >= 1.3.0.1 && < 2.0,
                   mtl,
                   network-transport >= 0.4 && < 1.0,
                   network-transport-tcp >= 0.4 && < 1.0,
                   binary >= 0.6.3.0 && < 1.0,
                   network >= 2.3 && < 3.0,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 3.0,
                   time > 1.4 && < 2.0,
                   test-framework >= 0.6 && < 1.0,
                   test-framework-hunit,
                   template-haskell,
                   QuickCheck >= 2.4,
                   test-framework-quickcheck2,
                   transformers,
                   rematch >= 0.2.0.0,
                   ghc-prim
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -eventlog
  extensions:      CPP
  main-is:         TestTaskQueues.hs

test-suite PoolsTests
  type:            exitcode-stdio-1.0
--  x-uses-tf:       true
  build-depends:
                   base >= 4.8.2.0 && < 5,
                   ansi-terminal >= 0.5 && < 1.0,
                   containers,
                   hashable,
                   exceptions,
                   unordered-containers,
                   rank1dynamic >= 0.3.3.0,
                   distributed-process >= 0.7.4,
                   distributed-process-systest >= 0.1.1,
                   distributed-process-task,
                   distributed-process-extras >= 0.3.2,
                   distributed-process-async >= 0.2.4,
                   distributed-process-client-server >= 0.2.5,
                   distributed-static,
                   bytestring,
                   data-accessor,
                   fingertree < 0.2,
                   deepseq >= 1.3.0.1 && < 2.0,
                   mtl,
                   network-transport >= 0.4 && < 1.0,
                   network-transport-tcp >= 0.4 && < 1.0,
                   binary >= 0.6.3.0 && < 1.0,
                   network >= 2.3 && < 3.0,
                   HUnit >= 1.2 && < 2,
                   stm >= 2.3 && < 3.0,
                   time > 1.4 && < 2.0,
                   test-framework >= 0.6 && < 1.0,
                   test-framework-hunit,
                   template-haskell,
                   QuickCheck >= 2.4,
                   test-framework-quickcheck2,
                   transformers,
                   rematch >= 0.2.0.0,
                   ghc-prim
  hs-source-dirs:
                   tests
  ghc-options:     -Wall -threaded -rtsopts -with-rtsopts=-N -fno-warn-unused-do-bind -eventlog
  extensions:      CPP
  main-is:         TestPool.hs
